[package]
name = "stevia"
version = "0.1.0"
authors = ["Giorgio Pomettini <giorgio.pomettini@gmail.com>"]
edition = "2018"

[dependencies]
regex = ">=1"
clap = ">=2"
assert_cmd = ">=0.11.1"
escargot = ">=0.5"
epub-builder = ">=0.4"
image = ">=0.21.2"
iui = { git = "https://github.com/rust-native-ui/libui-rs.git" }